--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-pillow==9.4.0
-pilmoji==2.0.2
-flask==3.0.0
-requests==2.28.2
-emoji==2.2.0
+Pillow>=10.2.0
+pilmoji>=2.0.2
+flask>=3.0.0
+requests>=2.31.0
+emoji>=2.8.0
