--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,15 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/*.py", "use": "@vercel/python" }
+    {
+      "src": "api/index.py",
+      "use": "@vercel/python"
+    }
   ],
   "routes": [
-    { "src": "/.*", "dest": "main.py" }
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/main.py"
+    }
   ]
 }
